# calcpp

./: .clang-format  .sublime-project  CMakeLists.txt  mainwindow.ui
old/: CMakeLists.txt  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
old/calendar/: CMakeLists.txt  CalendarView.cpp  SingleDayCalendar.cpp  tasks.cpp
old/tree/: TreeItem.h  TreeModel.cpp  TreeModel.h
old/utils/: algorithms-tests.cpp  algorithms.cpp  algorithms.h
qt-ex/: default.txt
sp/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/calendar/: CalendarView.cpp  CalendarView.h  SingleDayCalendar.cpp  SingleDayCalendar.h  tasks.cpp  tasks.h
src/old/calendar/: CalendarView.h
src/tree/: CMakeLists.txt  TreeItem.cpp
src/utils/: CMakeLists.txt  algorithms-tests.cpp  algorithms.cpp  algorithms.h  algorithms.tpp
src/views/: CalendarView.cpp  CalendarView.h  TreeView.cpp  TreeView.h
